                cat_defaults (cat.output.las) and expert GUI.
                The CAT ROIs will extract the intensities of the Ym rather of 
                the Ymi. The CAT report now shows the Ym rather than the Ymi.
(2) Changed:    Added ROI menu to expert GUI.
(3) Fixed:      Volume creation error in TCA part of cat_surf_createCS.
(4) Fixed:      Update version of cat_surf_render.
(5) Changed:    Added surface type check in cat_surf_resamp to ignore
                '.central.' and '.sphere.'.                
(6) Fixed:      Fast correction of side flip in animal atlas maps. 

------------------------------------------------------------------------
r969 | dahnke | 2016-07-21 14:34:10 +0200 (Do, 21 Jul 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_createCS.m

(1) Fixed:      Volume creation error in TCA part of cat_surf_createCS (part 2).


------------------------------------------------------------------------
r970 | gaser | 2016-07-22 12:56:01 +0200 (Fr, 22 Jul 2016) | 9 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_render.m
M       html/cat.html

Fixed: cat_surf_render did not work properly for all matlab version, now use
old version again.

------------------------------------------------------------------------
r971 | gaser | 2016-07-22 14:34:56 +0200 (Fr, 22 Jul 2016) | 8 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_run.m
M       tbx_cfg_cat.m

Fixed: Corrected handling and fields for las output.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_resamp.m
M       cat_surf_resamp_freesurfer.m
M       html/cat.html

Fixed: Metadata after resampling and smoothing now only contain name and not 
path of the filename to allow that files can be moved before stat. analysis.
------------------------------------------------------------------------
r972 | gaser | 2016-07-25 11:30:30